# docling_optimize

./: .gitignore  main.py  pyproject.toml
data/pdf/outputs/: timing.json
notebooks/: docling_extractor.ipynb  standard_docling.ipynb
src/: extraction_models.py  pymupdf_backend.py
src/docling_optimize/: docling_extractor.py  pymupdf_backend.py  standard_docling.py
src/docling_optimize/config/: app_config.yml  models.py
