[project]
name = "docling-optimize"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.66.0",
    "ipykernel>=7.1.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docling_optimize"]
